<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.quizapp.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/qm" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/header"
            style="@style/header"
            android:text="@string/q4Header" />

        <TextView
            android:id="@+id/blueLine"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".25"
            android:background="#03A9F4" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="16">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@drawable/background"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    style="@style/questions"
                    android:background="@drawable/question_background"
                    android:text="@string/q4" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="5"
                    android:orientation="vertical">

                    <CheckBox
                        android:id="@+id/checkboxA"
                        style="@style/checkboxes"
                        android:text="@string/checkboxTextA" />

                    <CheckBox
                        android:id="@+id/checkboxB"
                        style="@style/checkboxes"
                        android:text="@string/checkboxTextB" />

                    <CheckBox
                        android:id="@+id/checkboxC"
                        style="@style/checkboxes"
                        android:text="@string/checkboxTextC" />

                    <CheckBox
                        android:id="@+id/checkboxD"
                        style="@style/checkboxes"
                        android:text="@string/checkboxTextD" />
                </LinearLayout>
            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/nextBackView"
            style="@style/relViewButtons">


            <ImageButton
                android:id="@+id/backbutton"
                style="@style/backNextButtons"
                android:onClick="backButton"
                android:src="@drawable/back" />

            <TextView
                style="@style/backNextText"
                android:layout_toRightOf="@id/backbutton"
                android:text="@string/back" />

            <TextView
                style="@style/backNextText"
                android:layout_toLeftOf="@+id/nextButton"
                android:text="@string/next" />

            <ImageButton
                android:id="@+id/nextButton"
                style="@style/backNextButtons"
                android:layout_alignParentRight="true"
                android:onClick="nextButton"
                android:src="@drawable/next" />

        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>

