<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.quizapp.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/qm" />

    <TextView
        android:id="@+id/header"
        style="@style/header"
        android:text="@string/scoreHeader" />

    <TextView
        android:id="@+id/blueLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header"
        android:background="#03A9F4" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/nextBackView"
        android:layout_below="@+id/blueLine"
        android:layout_margin="48dp"
        android:background="@drawable/background"
        android:orientation="vertical">

        <TextView
            android:id="@+id/blueLine2"
            android:layout_width="1dp"
            android:layout_height="6dp"
            android:layout_below="@+id/header"
            android:layout_gravity="center"
            android:background="#03A9F4" />

        <TextView
            android:id="@+id/questions"
            style="@style/questions"
            android:text="@string/score" />

        <TextView
            android:id="@+id/finalScore"
            style="@style/scoreMessage"
            android:textColor="#000"
            android:text="@string/scoreMessage"/>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/nextBackView"
        style="@style/relViewButtons">

        <ImageButton
            android:id="@+id/backbutton"
            style="@style/backNextButtons"
            android:onClick="backButton"
            android:src="@drawable/back" />

        <TextView
            style="@style/backNextText"
            android:layout_toRightOf="@id/backbutton"
            android:text="@string/scoreBackButton" />

        <TextView
            style="@style/backNextText"
            android:layout_toLeftOf="@+id/scoreButton"
            android:text="@string/scoreButtonText" />

        <ImageButton
            android:id="@+id/scoreButton"
            style="@style/backNextButtons"
            android:layout_alignParentRight="true"
            android:onClick="nextButton"
            android:src="@drawable/greencheck" />

    </RelativeLayout>

</RelativeLayout>

