<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.android.quizapp.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/qm" />

    <TextView
        android:id="@+id/header"
        style="@style/header"
        android:text="@string/q3Header" />

    <TextView
        android:id="@+id/blueLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header"
        android:background="#03A9F4" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/nextBackView"
        android:layout_below="@+id/blueLine"
        android:layout_margin="48dp"
        android:background="@drawable/background"
        android:orientation="vertical">

        <TextView
            android:id="@+id/blueLine2"
            android:layout_width="1dp"
            android:layout_height="6dp"
            android:layout_below="@+id/header"
            android:background="#03A9F4"
            android:layout_gravity="center"/>


        <TextView
            android:id="@+id/questions"
            style="@style/questions"
            android:text="@string/q3" />

        <EditText
            android:id="@+id/q3_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint"
            style="@style/q3_input_style" />

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/nextBackView"
        style="@style/relViewButtons">


        <ImageButton
            android:id="@+id/backbutton"
            style="@style/backNextButtons"
            android:src="@drawable/back"
            android:onClick="backButton"/>

        <TextView
            style="@style/backNextText"
            android:layout_toRightOf="@id/backbutton"
            android:text="@string/back" />

        <TextView
            style="@style/backNextText"
            android:layout_toLeftOf="@+id/nextButton"
            android:text="@string/next" />

        <ImageButton
            android:id="@+id/nextButton"
            style="@style/backNextButtons"
            android:layout_alignParentRight="true"
            android:onClick="nextButton"
            android:src="@drawable/next" />

    </RelativeLayout>

</RelativeLayout>

